<resources>
    <string name="app_name">MovieRx</string>
    <string name="ok">ok</string>
    <string name="action">Ação</string>
    <string name="home">Início</string>
    <string name="adventure">Aventura</string>
    <string name="animation">Animação</string>
    <string name="comedy">Comédia</string>
    <string name="crime">Crime</string>
    <string name="drama">Drama</string>
    <string name="horror">Terror</string>
    <string name="scifi">Futurista</string>
</resources>
